# projtempl

./: .gitignore  README.md  package.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  server.py
backend/scripts/: pydantic2ts.py
