[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Charles Parker <charles@parkerfolk.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
fastapi = "^0.115.7"
structlog = "^25.1.0"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
